primary_text_field

--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -1,6 +1,10 @@
 {
   "@@locale": "ja",
   "deckList": "デッキリスト",
+  "deckName": "デッキ名",
   "registerDeckName": "デッキ名の登録",
+  "deckNameRequiredError": "デッキ名を入力してください",
+  "deckNameMinLengthError": "デッキ名は{minLength}文字以上で入力してください",
+  "deckNameMaxLengthError": "デッキ名は{maxLength}文字以内で入力してください",
   "hello": "こんちゃ"
 }
