--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,10 @@
 {
   "@@locale": "en",
   "deckList": "DeckList",
-  "registerDeckName": "Register deck name",
+  "deckName": "Deckname",
+  "registerDeckName": "Register Deckname",
+  "deckNameRequiredError": "Please enter a deck name.",
+  "deckNameMinLengthError": "Deck name must be at least {minLength} characters.",
+  "deckNameMaxLengthError": "Deck name must be {maxLength} characters or less.",
   "hello": "Heeey"
 }
