--- a/assets/i18n/text.i18n.csv
+++ b/assets/i18n/text.i18n.csv
@@ -21,4 +21,5 @@ linkMonster,LinkMonster,リンクモンスター
 spell,Spell,魔法
 trap,Trap,罠
 cardType,CardType,カードの種類
+illustration,Illustration,イラスト
 hello,Heeey,こんちゃ
