--- a/assets/i18n/text.i18n.csv
+++ b/assets/i18n/text.i18n.csv
@@ -22,4 +22,5 @@ spell,Spell,魔法
 trap,Trap,罠
 cardType,CardType,カードの種類
 illustration,Illustration,イラスト
+cropIluustration,CropIllustration,イラストの切り抜き
 hello,Heeey,こんちゃ
