--- a/assets/i18n/text.i18n.csv
+++ b/assets/i18n/text.i18n.csv
@@ -33,3 +33,5 @@ turn,Turn,ターン
 duel,duel,デュエル
 numberOfTimes,NumberOfTimes,回数
 effectDescription,EffectDescription,効果説明
+initialValue,InitialValue,初期値
+button,Button,ボタン
