--- a/assets/i18n/text.i18n.csv
+++ b/assets/i18n/text.i18n.csv
@@ -44,3 +44,4 @@ changeDeckNameDialogTitle,Change Deckname,デッキ名の変更
 changeDeckName,Change Deckname,デッキ名を変更
 deleteDeck,Delete Deck,デッキを削除
 deleteDeckConfirm,Do you want to remove this Deck?,このデッキを削除しますか?
+buttonsLengthVaridateError,Register one or more buttons or counters.,ボタンまたはカウンターを1つ以上登録してください
