--- a/assets/i18n/text.i18n.csv
+++ b/assets/i18n/text.i18n.csv
@@ -67,4 +67,9 @@ withDeckSlot3,With Deck Slot +3,デッキ作成枠+3付き
 existPurchase,Already purchased.,購入済み
 confirm,Confirm,確認
 multipleAdsPurchase,Multiple ad-free purchases were identified.\nDeck slots for the amount purchased converted to +10.,広告非表示の複数購入が確認されました。\n購入金額分のデッキ枠、+10に変換されます。
-currentDeckSlot,Current deck slot,現在のデッキ枠
+currentDeckSlot,Current deck slot,現在のデッキ作成枠
+numberOfDeck,NumberOfDeck,デッキ数
+removeAdsAndDeckSlot,Delete ads and purchase deck space,広告削除・デッキ枠の購入
+deckSlotDescription,Deck creation slots can be increased by purchasing them.,デッキ作成枠は購入することで増やすことができます。
+limitOfDeckSlot,The maximum number of decks has been reached.,デッキ数が上限に達しました。
+goToPurchase,Go to purchase,購入画面へ
